# flutter_test_r

./: README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
cmake/: main.cmake  rust_crate.cmake
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/debug/: AndroidManifest.xml
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
flutter_example/: Cargo.toml
flutter_example/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs  test.rs
ios/: bridge_generated.h  flutter_test_r.podspec
ios/Classes/: FlutterTest_rPlugin.h  FlutterTest_rPlugin.m  SwiftFlutterTest_rPlugin.swift
lib/: bridge_generated.dart  flutter_test_r.dart
macos/: flutter_test_r.podspec
macos/Classes/: FlutterTest_rPlugin.swift
windows/: CMakeLists.txt  flutter_test_r_plugin.cpp  flutter_test_r_plugin.h  flutter_test_r_plugin_c_api.cpp
windows/include/flutter_test_r/: flutter_test_r_plugin_c_api.h
windows/rust_crate/: CMakeLists.txt
(+2 files in other folders)
