[package]
name = "flutter_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "1"
reqwest = { version = "0.11.12", features = ["blocking"] }
anyhow = "1.0"
openssl = { version = "0.10.42", features = ["vendored"] }
